# aws-dummy

./: .travis.yml  CMakeLists.txt  README.md
include/: Dummy.h
src/: CMakeLists.txt  Dummy.cpp  main.cpp
